só falta colocar os códigos de erro no swagger

--- a/BackEnd/BackEnd/appsettings.json
+++ b/BackEnd/BackEnd/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "SecurityKey": "9A8S4D98A4SD89A4WE65AS1D9Q8W1D89",
+  "Issuer": "http://localhost:51568/",
+  "Audience": "http://localhost:51568/",
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
